syntax = "proto3";

package chat;
option go_package="github.com/Gloveman/go-grpc-chat/chatpb";

service ChatService {
    //Global 서버 접속 & DM 수신
    rpc Connect(ConnectRequest) returns (stream ChatMessage);

    //로비: 방 목록 조회 & 전체 유저 리스트 조회
    rpc GetRoomsInfo(RoomsInfoRequest) returns (RoomsInfoResponse);
    rpc GetAllUsers(AllUsersRequest) returns (AllUsersResponse);

    // 채팅방: 방 입장 & 방 내부 유저 리스트 조회
    rpc JoinRoom(JoinRequest) returns (stream ChatMessage);
    rpc GetRoomUsers(RoomUsersRequest) returns (RoomUsersResponse);
    // 메시지 전송 - 메시지 전송 및 전송 결과 반환
    rpc SendMessage(ChatMessage) returns (SendResponse);
    // 파일 전송
    rpc UploadFile(stream FileChunk) returns (UploadStatus);
    rpc DownloadFile(DownloadRequest) returns (stream FileChunk);
}

message ConnectRequest {
    string user_name = 1;
}


message RoomInfo {
    int32 room_id = 1;
    string room_name = 2;
    int32 client_count = 3;
}
message RoomsInfoRequest {
    //방 필터링 시 파라미터 추가
}
message RoomsInfoResponse {
    repeated RoomInfo rooms = 1;
}

message UserInfo {
    string user_name=1;
}
message AllUsersRequest {
}
message AllUsersResponse {
    repeated UserInfo users = 1;
}
message RoomUsersRequest {
    int32 room_id = 1;
}
message RoomUsersResponse {
    repeated UserInfo users = 1;
}

message JoinRequest {
    string user_name = 1;
    int32 room_id = 2;
    string room_name = 3;
}

message ChatMessage {
    string message_text = 1;
    string sender_user_name = 10;
    string sender_user_id = 11;
    int32 room_id = 20;
    string target_user_id = 21; //DM용
    string file_id = 30;
    string file_name = 31;
}
message SendResponse {
    bool success = 1;
}

message FileChunk {
    oneof data {
        FileInfo info = 1;
        bytes chunk_data = 2;
    }
}

message FileInfo {
    string file_name = 1;
    string file_type = 2;
    //권한 제어 정보
    int32 room_id = 3;
    string target_user_id = 4;
}

message UploadStatus {
    string file_id = 1;
    bool success = 2;
    string message = 3;
}

message DownloadRequest {
    string file_id = 1;
    string request_user_name = 2;  
}
